--- a/docs/manual/manual.css
+++ b/docs/manual/manual.css
@@ -324,7 +324,7 @@ h1.title {
   padding-left: 80px;
   padding-top: 16px;
   border-bottom: none;
-  background: white url('ASE64.ico') no-repeat; }
+  background: white url('ase64.ico') no-repeat; }
 
 h1 { font-size: 20pt; }
 h2 { font-size: 14pt; }
