- All tools stuff refactored in various files/components. - Added classes: IToolLoop, Tool, ToolGroup, ToolInk, ToolController, ToolPointShape, ToolIntertwine, ToolBox, etc. - Added ToolLoopManager. - Removed old src/modules/tools.cpp. - Added ISettings and UISettingsImpl, adding the tools settings (onion skinning, grid, tiled mode, etc.). - Added App::PenSizeBeforeChange, PenSizeAfterChange, CurrentToolChange signals. - Renamed Context::get_bg/fg_color to getBg/FgColor. - Refactored Brush class to Pen and added PenType. - Renamed tiled_t to TiledMode. - get_config_rect now uses the new Rect class imported from Vaca instead of old jrect. - Added default_skin.xml to load tool icons. - Added pen preview in Editor::cursor stuff. - Added Editor::decorators.
Note: This big patch is from some time ago. I did my best to pre-commit other small changes before this big one.

--- a/docs/manual/manual.css
+++ b/docs/manual/manual.css
@@ -357,6 +357,29 @@ div.admonition-keyboard-shortcut p {
   display: inline;
 }
 
+div.admonition-summary {
+  color: #1020ff;
+  border: 1px solid #2080ff;
+  background-color: #00ffff;
+  padding: 14px;
+}
+div.admonition-summary dl {
+  margin-top: 0px;
+}
+div.admonition-summary dd {
+  margin-left: 0px;
+}
+div.admonition-summary p.admonition-title {
+  border: 1px solid #2080ff;
+  background-color: #ffffff;
+  padding: 8px;
+  float: right;
+  margin-left: 14px;
+}
+div.admonition-summary p {
+  margin-top: 0px;
+}
+
 tt.literal {
   background-color: #eee;
   padding: 0px 4px;
